fixed menu overlap bug

--- a/css/index.css
+++ b/css/index.css
@@ -15,7 +15,8 @@
 
 ul {
     list-style-type: none;
-    width: ;
+    width: 80%;
+    justify-content: space-between;
 }
 
 .menu {
@@ -29,9 +30,6 @@ ul {
   .menu > li {
     overflow: hidden;
     width: auto;
-  }
-
-  .menu > li > a {
   }
   
   .menu-button-container {
@@ -59,6 +57,7 @@ ul {
     width: 30px;
     transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
     border-radius: 2px;
+    margin-bottom: 2%;
   }
 
   .menu-button::before {
@@ -85,7 +84,7 @@ ul {
     transform: rotate(-405deg);
   }
   
-  @media (max-width: 700px) {
+  @media (max-width: 900px) {
     .menu-button-container {
       display: flex;
     }
@@ -98,10 +97,6 @@ ul {
       width: 100%;
       justify-content: center;
       align-items: center;
-    }
-    
-    #menu-toggle:checked ~ .menu {
-        padding-bottom: 50%;
     }
 
     #menu-toggle ~ .menu li {
@@ -117,13 +112,13 @@ ul {
       transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
     }
 
-    #menu-toggle:checked ~ .menu li button {
+    #menu-toggle:checked ~ .menu li .header-button {
         background-color: transparent;
         box-shadow: none;
         height: 2.5em;
-        padding: 0.5em;
         transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
         font-size: 1.125rem !important;
+        padding: 0;
       }
 
     .menu > li {
@@ -134,18 +129,25 @@ ul {
       width: 100%;
       color: white;
       background-color: gray;
+      z-index: 1;
     }
     .menu > li:not(:last-child) {
       border-bottom: 1px solid #444;
     }
+
+    .header-button:hover {
+        color: black;
+    }
   }
 
 .toggled-menu {
-    padding-top: 18rem !important;
+    padding-bottom: 16.9rem !important;
 }
 
 .header-button {
     padding: 0.5rem 1rem;
+    text-decoration: none;
+    color: white
 }
 
 .menu-icon > div {
